# City-Traffic-Simulator

./: .gitignore  CMakeLists.txt  event_log.json  simulation_summary.csv  simulation_timeline.csv
include/core/: City.h  ConsolePreview.h  EventLog.h  Intersection.h  PedestrianCrossing.h  RoadSegment.h  Simulation.h  StatisticsCollector.h  TrafficLight.h  Vector2D.h  Vehicle.h  VehicleGenerator.h
src/app/: main.cpp
src/core/: City.cpp  EventLog.cpp  Intersection.cpp  PedestrianCrossing.cpp  RoadSegment.cpp  Simulation.cpp  StatisticsCollector.cpp  TrafficLight.cpp  Vehicle.cpp  VehicleGenerator.cpp
